--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
   "type": "module",
+  "license":"MIT",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
